# eden-skills

./: .gitignore  AGENTS.md  Cargo.toml  EXECUTION_TRACKER.md  LICENSE  LICENSE.md  README.md  ROADMAP.md  STATUS.yaml  install.ps1  install.sh  skills.toml  skills.yaml
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
crates/eden-skills-cli/: Cargo.toml  README.md
crates/eden-skills-cli/src/: commands.rs  lib.rs  main.rs  signal.rs  ui.rs
crates/eden-skills-cli/src/commands/: clean.rs  common.rs  config_ops.rs  diagnose.rs  docker_cmd.rs  install.rs  mod.rs  plan_cmd.rs  reconcile.rs  remove.rs  update.rs
crates/eden-skills-cli/src/commands/install/: discovery.rs  dry_run.rs  execute.rs  mod.rs  output.rs  platform.rs
crates/eden-skills-cli/src/ui/: color.rs  context.rs  format.rs  mod.rs  prompt.rs  table.rs
crates/eden-skills-cli/tests/: apply_repair.rs  cache_clean_tests.rs  cli_ux_tests.rs  config_export.rs  config_import.rs  config_lifecycle.rs  distribution_tests.rs  doc_coverage_tests.rs  docker_bind_tests.rs  docker_managed_tests.rs  doctor_copy.rs  doctor_json_contract.rs  doctor_output.rs  doctor_strict_parity.rs  doctor_ux_tests.rs  exit_code_matrix.rs  help_system_tests.rs  hint_sync_tests.rs  init_command.rs  install_agent_detect_tests.rs  install_discovery_tests.rs  install_script_tests.rs  install_url_tests.rs  interactive_ux_tests.rs  invalid_config_exit.rs  junction_tests.rs  list_command.rs  list_json_contract.rs  list_source_tests.rs  lock_diff_tests.rs  lock_lifecycle_tests.rs  newline_policy_tests.rs  output_consistency_tests.rs  output_polish_tests.rs  output_upgrade_a1_tests.rs  output_upgrade_a2_tests.rs  output_upgrade_b_tests.rs  perf_sync_tests.rs  phase25_schema_tests.rs  phase2_commands.rs  (+10 more)
crates/eden-skills-cli/tests/common/: mod.rs
crates/eden-skills-core/: Cargo.toml  README.md
crates/eden-skills-core/src/: adapter.rs  agents.rs  config.rs  discovery.rs  error.rs  lib.rs  lock.rs  managed.rs  paths.rs  plan.rs  reactor.rs  registry.rs  safety.rs  source.rs  source_format.rs  state.rs  verify.rs
crates/eden-skills-core/src/adapter/: docker.rs  local.rs  manifest.rs  mod.rs
crates/eden-skills-core/tests/: adapter_tests.rs  agent_detect_tests.rs  config_tests.rs  discovery_tests.rs  junction_tests.rs  lock_diff_tests.rs  lock_tests.rs  paths_tests.rs  perf_sync_tests.rs  phase2_schema_tests.rs  plan_copy_edge_tests.rs  plan_json_contract.rs  reactor_tests.rs  registry_tests.rs  safety_tests.rs  source_format_tests.rs  source_sync_tests.rs  symlink_canonical_tests.rs  verify_dedup_tests.rs
crates/eden-skills-indexer/: Cargo.toml
docs/: 01-quickstart.md  02-config-lifecycle.md  03-registry-and-install.md  04-docker-targets.md  05-safety-strict-and-exit-codes.md  06-troubleshooting.md  07-cli-reference.md  README.md  agentic-workflow.md
errors/ci/: docker-related.txt  win-platform.txt
images/: banner-reference.html  banner.html
images/banner-builder/: README.md  export_banner.py  pyproject.toml  remove_bg.py
images/demos/: readme-demo.tape
images/x-launch/: export_x_launch_assets.py  pain-contrast-card.html  product-demo.tape  product-hook-card.html  proof-status-card.html  shared.css
prompt/: PHASE2-STAGE-A.md  PHASE2-STAGE-B.md  PHASE25_KICK_BUILDER.md  PHASE27_KICK_BUILDER.md  PHASE28_KICK_BUILDER.md  PHASE295_KICK_BUILDER.md  PHASE297_KICK_BUILDER.md  PHASE298_KICK_BUILDER.md  PHASE29_KICK_BUILDER.md  PHASE2_1_CLAUDE_OPUS_HANDOFF_PROMPT_STRICT.md  PHASE2_KICK_A.md  PHASE2_KICK_B.md  PHASE2_KICK_BUILDER.md
prompt/usage/: PHASE2_VIBE_CODING_GUIDE.md
spec/: PHASE1_BUILDER_REMAINING.md  PHASE2_1_CLAUDE_OPUS_HANDOFF_PROMPT.md  README.md  SPEC_AGENT_PATHS.md  SPEC_COMMANDS.md  SPEC_SCHEMA.md  SPEC_TEST_MATRIX.md  SPEC_TRACEABILITY.md
spec/phase1/: PHASE1_BUILDER_REMAINING.md  SPEC_AGENT_PATHS.md  SPEC_COMMANDS.md  SPEC_SCHEMA.md  SPEC_TEST_MATRIX.md  SPEC_TRACEABILITY.md
spec/phase2/: PHASE2_BUILDER_REMAINING.md  README.md  SPEC_ADAPTER.md  SPEC_COMMANDS_EXT.md  SPEC_REACTOR.md  SPEC_REGISTRY.md  SPEC_SCHEMA_EXT.md  SPEC_TEST_MATRIX.md  SPEC_TRACEABILITY.md
spec/phase2.5/: README.md  SPEC_AGENT_DETECT.md  SPEC_CLI_UX.md  SPEC_DISTRIBUTION.md  SPEC_INSTALL_URL.md  SPEC_SCHEMA_P25.md  SPEC_TEST_MATRIX.md  SPEC_TRACEABILITY.md
spec/phase2.7/: README.md  SPEC_HELP_SYSTEM.md  SPEC_LOCK.md  SPEC_OUTPUT_POLISH.md  SPEC_REMOVE_ENH.md  SPEC_TEST_MATRIX.md  SPEC_TRACEABILITY.md
spec/phase2.8/: README.md  SPEC_CODE_STRUCTURE.md  SPEC_OUTPUT_UPGRADE.md  SPEC_TABLE_RENDERING.md  SPEC_TEST_MATRIX.md  SPEC_TRACEABILITY.md
spec/phase2.9/: README.md  SPEC_INSTALL_UX.md  SPEC_NEWLINE_POLICY.md  SPEC_OUTPUT_CONSISTENCY.md  SPEC_TABLE_FIX.md  SPEC_TEST_MATRIX.md  SPEC_TRACEABILITY.md  SPEC_UPDATE_EXT.md
spec/phase2.95/: README.md  SPEC_DOCKER_BIND.md  SPEC_INSTALL_SCRIPT.md  SPEC_PERF_SYNC.md  SPEC_REMOVE_ALL.md  SPEC_TEST_MATRIX.md  SPEC_TRACEABILITY.md  SPEC_WINDOWS_JUNCTION.md
spec/phase2.97/: README.md  SPEC_CACHE_CLEAN.md  SPEC_DOCKER_MANAGED.md  SPEC_HINT_SYNC.md  SPEC_INTERACTIVE_UX.md  SPEC_TABLE_STYLE.md  SPEC_TEST_MATRIX.md  SPEC_TRACEABILITY.md  SPEC_UPDATE_FIX.md
spec/phase2.98/: README.md  SPEC_DOCTOR_UX.md  SPEC_LIST_SOURCE.md  SPEC_TEST_MATRIX.md  SPEC_TRACEABILITY.md  SPEC_VERIFY_DEDUP.md
trace/: README.md
trace/phase1/: status.yaml  tracker.md
trace/phase2.5/: status.yaml  tracker.md
trace/phase2.7/: status.yaml  tracker.md
trace/phase2.8/: status.yaml  tracker.md
trace/phase2.9/: status.yaml  tracker.md
trace/phase2.95/: status.yaml  tracker.md
(+20 files in other folders)
