[workspace]
members = [
  "crates/eden-skills-core",
  "crates/eden-skills-cli",
  "crates/eden-skills-indexer",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.7"
repository = "https://github.com/AI-Eden/eden-skills"
homepage = "https://github.com/AI-Eden/eden-skills"
categories = []
