[workspace]
members = [
  "crates/eden-skills-core",
  "crates/eden-skills-cli",
  "crates/eden-skills-indexer",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.2.2"
repository = "https://github.com/AI-Eden/eden-skills"
homepage = "https://github.com/AI-Eden/eden-skills"
categories = []
