[package]
name = "eden-skills-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
eden-skills-core = { path = "../eden-skills-core" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
console = "0.15"
indicatif = "0.18"
dialoguer = "0.12"

[dev-dependencies]
toml = "0.8"
tempfile = "3.14"

[[bin]]
name = "eden-skills"
path = "src/main.rs"
