[package]
name = "eden-skills"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Deterministic agent skill installer for local coding assistants"
repository = "https://github.com/AI-Eden/eden-skills"
homepage = "https://github.com/AI-Eden/eden-skills"
readme = "README.md"
keywords = ["agent", "cli", "skills", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
eden-skills-core = { version = "0.1.0", path = "../eden-skills-core" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
console = "0.15"
indicatif = "0.18"
dialoguer = "0.12"

[lib]
name = "eden_skills_cli"
path = "src/lib.rs"

[dev-dependencies]
toml = "0.8"
tempfile = "3.14"

[[bin]]
name = "eden-skills"
path = "src/main.rs"
