[package]
name = "eden-skills"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Deterministic & Blazing-Fast Skills Manager for AI Agents (Claude Code, Cursor, Codex & More)."
repository = "https://github.com/AI-Eden/eden-skills"
homepage = "https://github.com/AI-Eden/eden-skills"
readme = "README.md"
keywords = ["agent", "cli", "skills", "developer-tools"]
categories = ["command-line-utilities", "development-tools", "artificial-intelligence", "asynchronous"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/eden-skills-{ version }-{ target }.{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
eden-skills-core = { version = "0.2.0", path = "../eden-skills-core" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
indicatif = "0.18"
dialoguer = "0.12"
comfy-table = { version = "7", features = ["custom_styling"] }
owo-colors = { version = "4", features = ["supports-colors"] }
enable-ansi-support = "0.2"
ctrlc = "3.5.2"

[target.'cfg(windows)'.dependencies]
junction = "1"
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_System_Console", "Win32_Storage_FileSystem"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[lib]
name = "eden_skills_cli"
path = "src/lib.rs"

[dev-dependencies]
toml = "0.8"
tempfile = "3.14"

[[bin]]
name = "eden-skills"
path = "src/main.rs"
