[package]
name = "eden-skills-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.14"

[lib]
name = "eden_skills_core"
path = "src/lib.rs"
