[package]
name = "eden-skills-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
semver = "1"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3.14"
serde_json = "1.0"

[lib]
name = "eden_skills_core"
path = "src/lib.rs"
